--- a/static/adverts/styles/filters.css
+++ b/static/adverts/styles/filters.css
@@ -1,5 +1,6 @@
 .filters {
     display: flex;
+    flex-wrap: wrap;
     align-items: flex-end;
 }
 .filter {
@@ -20,6 +21,7 @@
     flex-direction: row;
     align-items: center;
     padding: 0 15px;
+    margin-bottom: 10px;
     height: 40px;
     font-size: 16px;
     color: #FFFFFF;
@@ -71,7 +73,16 @@
     background: none;
     margin-right: 10px;
 }
-
+.f-city {
+    position: relative;
+}
+.f-city i {
+    position: absolute;
+    bottom: 50%;
+    right: 10px;
+    transform: translateY(50%);
+    color: #FFFFFF;
+}
 
 .accordion * {
     border: none;
@@ -93,5 +104,22 @@
 }
 .accordion-body {
     display: flex;
+    flex-wrap: wrap;
     padding: 0;
+}
+
+@media screen and (max-width: 760px) {
+    form {
+        position: relative;
+    }
+    .filters > button {
+        position: absolute;
+        bottom: -10px;
+        left: 0;
+        transform: translateY(100%)
+    }
+
+    .filters input, .f-checkbox {
+      width: 150px !important;
+    }
 }
