--- a/static/adverts/styles/style.css
+++ b/static/adverts/styles/style.css
@@ -23,3 +23,48 @@ body::-webkit-scrollbar {
     width: 8px !important;
     background-color: #fff !important;
 }
+
+/* ADVERTS STYLE */
+.advertBlock {
+    border: 2px solid #D5BDAD;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+    color: #2A4252;
+}
+
+.advertBlock .carousel-control-next-icon, .advertBlock .carousel-control-prev-icon {
+    background-color: rgba(0, 0, 0, 0.25);
+    background-size: 60%;
+}
+
+.advertBlock .carousel {
+    border-right: 2px solid #d5bdad;
+}
+
+.advertBlock .carousel-item {
+    border-radius: 15px 0 0 15px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: white;
+}
+
+.advertBlock .carousel-indicators {
+    background-color: rgba(0, 0, 0, 0.10);
+    width: fit-content;
+}
+
+.advertBlock .carousel-indicators .active {
+    background-color: #ffa970;
+}
+
+/* RESPONSIVE */
+@media screen and (max-width:989px){
+    .advertBlock .carousel {
+        border-right: 0 !important;
+    }
+    .advertBlock .carousel-item {
+    border-radius: 15px 15px 0 0;
+}
+}
