Gestion des includes responsives

--- a/adverts/templates/adverts/account.html
+++ b/adverts/templates/adverts/account.html
@@ -33,9 +33,11 @@
 		</div>
 	</div>
 	<h2>{% translate "My adverts" %}</h2>
-	
-	{% include 'includes/user_adverts.html' %}
+	<div class="container px-0">
 
+	{% include 'includes/user_adverts.html' %}
+	
+	</div>
 </div>
 
 {% include "includes/confirm_modal.html" %}
