--- a/adverts/templates/includes/last_adverts.html
+++ b/adverts/templates/includes/last_adverts.html
@@ -3,14 +3,14 @@
 {% load static %}
 
 {% for last_user_advert in last_user_adverts %}
-    <div class="col-12 col-md-5 d-flex flex-wrap my-3 advertBlock">
-        <div id="userAdvertCarousel{{ forloop.counter }}" class="carousel carousel-fade slide col-12 col-lg-6" data-bs-ride="carousel" data-bs-interval="false">
+    <div class="col-12 col-md-5 d-flex flex-wrap my-3 advertBlock advert-cards">
+        <div id="userAdvertCarousel{{ forloop.counter }}" class="carousel carousel-fade slide col-12" data-bs-ride="carousel" data-bs-interval="false">
             <div class="carousel-indicators mx-auto rounded">
                 {% for i in last_user_advert.picture_count %}
                     <button type="button" data-bs-target="#userAdvertCarousel{{ forloop.parentloop.counter}}" data-bs-slide-to="{{ i }}" {% if forloop.first %}class="active" aria-current="true"{% endif %} aria-label="Slide {{ forloop.counter }}"></button>
                 {% endfor %}
             </div>
-            <div class="carousel-inner" style="height: 250px">
+            <div class="carousel-inner">
                 {% for picture in last_user_advert.pictures %}
                     <div class="carousel-item h-100 {% if forloop.first %}active{% endif %}" style="background-image: url('{% get_media_prefix %}images/{{ last_user_advert.id }}/{{ picture }}')"></div>
                 {% endfor %}
@@ -24,7 +24,7 @@
                 <span class="visually-hidden">{% translate "Next" %}</span>
             </button>
         </div>
-        <div class="px-3 py-3 d-flex flex-column justify-content-center col-12 col-lg-6">
+        <div class="px-3 py-3 d-flex flex-column justify-content-center col-12 advert-info">
             {% if request.user.is_authenticated %}   
                 <div class="d-flex justify-content-between">
                     <div class="h4 my-auto">{{ last_user_advert.price }}€</div>
