--- a/adverts/templates/adverts/create_advert_form.html
+++ b/adverts/templates/adverts/create_advert_form.html
@@ -7,27 +7,11 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<style>
-.borderCustom {
-    border: 2px solid #D5BDAD;
-    box-sizing: border-box;
-    box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    color: #2A4252;
-}
-
-.buttonCustom {
-    background-color:#2A4252; 
-    border-radius: 30px;
-    box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.25);
-    color:white;
-}
-</style>
 
     <div class="container py-5">
         <form method="POST" enctype="multipart/form-data">
             <div class="row justify-content-center" >            
-                <div class="col-8 borderCustom py-5">
+                <div class="col-12 col-md-8 borderCustom py-5">
                     <h2 class="mt-2 mb-5 text-center">{% translate "You are one form away from advertising your property..." %}</h3>
                         <div class="row justify-content-center">
                             <div class="col-8 ">  
@@ -98,8 +82,8 @@
                             </div>
                         </div>
                     <div class="row justify-content-center">
-                        <div class="col-4 text-center">
-                            <button type="submit" class="btn buttonCustom mt-5">{% translate "Create the advert" %}</button>
+                        <div class="col-8 text-center">
+                            <button type="submit" class="buttonCustom mt-5">{% translate "Create the advert" %}</button>
                         </div>  
                     </div>
                 </div>
