--- a/adverts/templates/adverts/login.html
+++ b/adverts/templates/adverts/login.html
@@ -7,47 +7,31 @@
 {% load crispy_forms_tags %}
 
 {% block content %}       
-<style>
-  .borderCustom {
-      border: 2px solid #D5BDAD;
-      box-sizing: border-box;
-      box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.25);
-      border-radius: 15px;
-      color: #2A4252;
-  }
-  
-  .buttonCustom {
-      background-color:#2A4252; 
-      border-radius: 30px;
-      box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.25);
-      color:white;
-  }
-</style>
 
-    <div class="container">
-        <form method="POST">
-            <div class="row justify-content-center" >    
-              <h2 class="mt-2 mt-5 text-center">{% translate "Login" %}</h3>        
-                <div class="col-8 borderCustom mt-5 pt-5 pb-5"> 
-                        <div class="row justify-content-center">
-                            <div class="col-8 ">  
-                                {% csrf_token %}
-                                <div class="row">
-                                  {{ login_form.username|as_crispy_field }}
-                                </div>
-                                <div class="row mt-4">
-                                  {{ login_form.password|as_crispy_field }}
-                                </div>
+<div class="container py-5">
+    <form method="POST">
+        <div class="row justify-content-center" >    
+            <h2 class="text-center">{% translate "Login" %}</h3>        
+            <div class="col-12 col-md-8 borderCustom mt-5 pt-5 pb-5"> 
+                    <div class="row justify-content-center">
+                        <div class="col-8 ">  
+                            {% csrf_token %}
+                            <div class="row">
+                                {{ login_form.username|as_crispy_field }}
+                            </div>
+                            <div class="row mt-4">
+                                {{ login_form.password|as_crispy_field }}
                             </div>
                         </div>
-                    <div class="row justify-content-center">
-                        <div class="col-8 text-center">
-                            <button type="submit" class="btn buttonCustom mt-5">{% translate "Log in" %}</button>
-                            <p class="text-center mt-3">{% translate "Don't have an account? " %}<a href="{% url 'adverts:register' %}">{% translate "Sign up" %}</a></p> 
-                        </div>     
                     </div>
+                <div class="row justify-content-center">
+                    <div class="col-8 text-center">
+                        <button type="submit" class="buttonCustom mt-5">{% translate "Log in" %}</button>
+                        <p class="text-center mt-3">{% translate "Don't have an account? " %}<a href="{% url 'adverts:register' %}">{% translate "Sign up" %}</a></p> 
+                    </div>     
                 </div>
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
