--- a/adverts/templates/adverts/register.html
+++ b/adverts/templates/adverts/register.html
@@ -7,59 +7,44 @@
 {% load crispy_forms_tags %}
 
 {% block content %}       
-<style>
-  .borderCustom {
-      border: 2px solid #D5BDAD;
-      box-sizing: border-box;
-      box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.25);
-      border-radius: 15px;
-      color: #2A4252;
-  }
-  
-  .buttonCustom {
-      background-color:#2A4252; 
-      border-radius: 30px;
-      box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.25);
-      color:white;
-  }
-</style>
 
-    <div class="container">
-        <form method="POST">
-            <div class="row justify-content-center" >    
-              <h1 class="mt-2 mt-5 text-center">{% translate "Registration" %}</h1>        
-                <div class="col-8 borderCustom mt-5 pt-5 pb-3"> 
-                        <div class="row justify-content-center">
-                            <div class="col-8 ">  
-								{% csrf_token %}
-								<div class="row">
-									{{ register_form.username|as_crispy_field }}
-								</div>
-								<div class="row mt-4">
-									{{ register_form.email|as_crispy_field }}
-								</div>
-								<div class="row mt-4">
-									{{ register_form.password1|as_crispy_field }}
-									{{ register_form.password2|as_crispy_field }}
-								</div>
-								<div class="row mt-4">
-									<div class="col">
-										{{ account_form.postal_code|as_crispy_field }}
-									</div>
-									<div class="col">
-										{{ account_form.phone_number|as_crispy_field }}
-									</div>
-								</div>
+<div class="container py-5">
+    <form method="POST">
+        <div class="row justify-content-center" >    
+            <h1 class="text-center">{% translate "Registration" %}</h1>        
+            <div class="col-12 col-md-8 borderCustom mt-5 pt-5 pb-3"> 
+                <div class="row justify-content-center">
+                    <div class="col-8 ">  
+                        {% csrf_token %}
+                        <div class="row">
+                            {{ register_form.username|as_crispy_field }}
+                        </div>
+                        <div class="row mt-4">
+                            {{ register_form.email|as_crispy_field }}
+                        </div>
+                        <div class="row mt-4">
+                            {{ register_form.password1|as_crispy_field }}
+                            {{ register_form.password2|as_crispy_field }}
+                        </div>
+                        <div class="row mt-4">
+                            <div class="col">
+                                {{ account_form.postal_code|as_crispy_field }}
+                            </div>
+                            <div class="col">
+                                {{ account_form.phone_number|as_crispy_field }}
                             </div>
                         </div>
-                    <div class="row justify-content-center">
-                        <div class="col-8 text-center">
-                            <button type="submit" class="btn buttonCustom mt-5">{% translate "Sign up" %}</button>
-                            <p class="text-center mt-3">{% translate "If you already have an account, " %}<a href="{% url 'adverts:login' %}">{% translate "log on" %}</a>.</p>
-                        </div>     
                     </div>
                 </div>
+                <div class="row justify-content-center">
+                    <div class="col-8 text-center">
+                        <button type="submit" class="buttonCustom mt-5">{% translate "Sign up" %}</button>
+                        <p class="text-center mt-3">{% translate "If you already have an account, " %}<a href="{% url 'adverts:login' %}">{% translate "log on" %}</a>.</p>
+                    </div>     
+                </div>
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
+</div>
+
 {% endblock %}
