--- a/static/adverts/styles/filters.css
+++ b/static/adverts/styles/filters.css
@@ -17,42 +17,28 @@
 .double-filter .filter.f-left {
     margin-right: 0;
 }
-.f-checkbox {
-    flex-direction: row;
-    align-items: center;
-    padding: 0 15px;
-    margin-bottom: 10px;
-    height: 40px;
-    font-size: 16px;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 20px;
-    background-color: #2A4252;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
 
 .filters > button {
     padding: 0 15px;
     height: 40px;
     width: 100px;
     font-size: 16px;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 20px;
-    background-color: #0D6EFD;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.filter input, .filter select {
+.filter input, .filter select, .f-checkbox {
     padding: 0 15px;
     height: 40px;
     width: 100px;
     font-size: 16px;
-    color: #FFFFFF;
-    border: none;
+    color: #2A4252;
+    border: 1px solid #2A4252;
     border-radius: 20px;
-    background-color: #2A4252;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: #fff;
+}
+.f-checkbox {
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+    width: 150px;
 }
 .filter select.large, .filter input.large {
     width: 150px;
@@ -84,7 +70,7 @@
     color: #FFFFFF;
 }
 
-.accordion * {
+.accordion-item{
     border: none;
 }
 .accordion-header button, .accordion-header button:focus{
@@ -120,6 +106,28 @@
     }
 
     .filters input, .f-checkbox {
-      width: 150px !important;
+      width: 150px;
     }
+
+}
+@media screen and (max-width: 580px){
+    .filters > .filter, .filter.f-checkbox{
+        width:48%;
+    }
+    .filters > .double-filter, .filters > .filter.mobile-full, .filters > .filter.mobile-full > *{
+        width:100%;
+    }
+    .double-filter .f-left, .double-filter .f-right{
+        width:50%;
+    }
+    .filters > .filter select, .filters > .filter input, .double-filter .f-left input, .double-filter .f-right input{
+        width:100% !important;
+    }
+    .filter{
+        margin-right:0;
+    }
+    .filter.mobile-m{
+        margin-right:4%;
+    }
+    
 }
