--- a/adverts/templates/adverts/favories.html
+++ b/adverts/templates/adverts/favories.html
@@ -9,60 +9,11 @@
 {% block content %}
 
 <div class="container py-5">
-    <div class="jumbotron py-100">
-        <div class="container px-0">
-            <h4>{% translate "My favorites" %}</h4>
-            <div class="mt-2 mx-0">
-                <div class="px-0 me-5">
-                    {% for user_fav in user_favs %}
-                        <div class="w-100 d-flex my-3 advertBlock">
-                            <div id="userAdvertCarousel{{ forloop.counter }}" class="carousel carousel-fade slide" data-bs-ride="carousel" data-bs-interval="false">
-                                <div class="carousel-indicators mx-auto rounded">
-                                    {% for i in user_fav.picture_count %}
-                                        <button type="button" data-bs-target="#userAdvertCarousel{{ forloop.parentloop.counter}}" data-bs-slide-to="{{ i }}" {% if forloop.first %}class="active" aria-current="true"{% endif %} aria-label="Slide {{ forloop.counter }}"></button>
-                                    {% endfor %}
-                                </div>
-                                <div class="carousel-inner" style="width: 350px; height: 250px">
-                                    {% for picture in user_fav.pictures %}
-                                        <div class="carousel-item h-100 {% if forloop.first %}active{% endif %}" style="background-image: url('{% get_media_prefix %}images/{{ user_fav.id }}/{{ picture }}')"></div>
-                                    {% endfor %}
-                                </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon rounded-circle p-4 ms-3" aria-hidden="true"></span>
-                                    <span class="visually-hidden">{% translate "Previous" %}</span>
-                                </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#userAdvertCarousel{{ forloop.counter }}" data-bs-slide="next">
-                                    <span class="carousel-control-next-icon rounded-circle p-4 me-3" aria-hidden="true"></span>
-                                    <span class="visually-hidden">{% translate "Next" %}</span>
-                                </button>
-                            </div>
-                            <div class="px-5 d-flex flex-column justify-content-center w-100">
-                                {% if request.user.is_authenticated %}   
-                                    <div class="d-flex justify-content-between">
-                                        <div class="h3 my-auto">{{ user_fav.price }}€</div>
-                                        <a class="text-dark" href="{% url 'adverts:remove-favorite' user_fav.id %}" title="{% translate "Delete from favorites" %}">
-                                            <i class="bi bi-heart-fill" style="font-size: 2rem"></i>
-                                        </a>
-                                    </div>
-                                {% else %}
-                                    <div class="h3">{{ user_fav.price }}€</div>
-                                {% endif %}
-                                <div class="fw-bold mb-2">{{ user_fav.service_type }} / {{ user_fav.property_type }}</div>
-                                <div class="fw-bold">{% blocktranslate with room_c=user_fav.room_count bedroom_c=user_fav.bedroom_count surface=user_fav.surface %}{{ room_c }} room(s) - {{ bedroom_c }} bedroom(s) - {{ surface }}m²{% endblocktranslate %}</div>
-                                <div class="fw-bold">
-                                    {% if user_fav.is_furnished %}{% translate "Furnished" %}{% endif %}
-                                    {% if user_fav.has_balcony %}{% translate "Balcony" %}{% endif %}
-                                    {% if user_fav.has_terrace %}{% translate "Terrace" %}{% endif %}
-                                    {% if user_fav.has_elevator %}{% translate "Elevator" %}{% endif %}
-                                    {% if user_fav.has_parking %}{% translate "Parking" %}{% endif %}
-                                </div>   
-                                <div class="mt-2">{{ user_fav.street_number }} {{ user_fav.street_name }}, {{ user_fav.city }} ({{ user_fav.postal_code }})</div>  
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
+    <div class="container px-0">
+        <h1>{% translate "My favorites" %}</h1>
+        
+        {% include 'includes/fav_adverts.html' %}
+
     </div>
 </div>
 
