--- a/adverts/templates/adverts/change-password.html
+++ b/adverts/templates/adverts/change-password.html
@@ -12,7 +12,7 @@
     <form method="POST">
         <div class="row justify-content-center" >    
             <h1 class="text-center">{% translate "Change my password" %}</h1>        
-            <div class="col-8 borderCustom mt-5 pt-5 pb-5"> 
+            <div class="col-12 col-md-8 borderCustom mt-5 pt-5 pb-5"> 
                     <div class="row justify-content-center">
                         <div class="col-8 ">  
                             {% csrf_token %}
