--- a/adverts/templates/adverts/properties_list.html
+++ b/adverts/templates/adverts/properties_list.html
@@ -22,7 +22,7 @@
                     </select>
                 </div>
                 <div class="filter">
-                    <label for="type-purs">{% translate "Purchase type" %}</label>
+                    <label for="type-purs">{% translate "Service type" %}</label>
                     <select class="large" name="type-purs" id="type-purs">
                         <option value="">{% translate "All" %}</option>
                         <option value="location">{% translate "For rent" %}</option>
