fix translations on filters

--- a/adverts/templates/adverts/properties_list.html
+++ b/adverts/templates/adverts/properties_list.html
@@ -70,7 +70,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        Plus de filtres
+                        {% translate "More filters" %}
                     </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -103,7 +103,7 @@
     </div>
     <div class="container py-5">
         {% if not adverts %}
-            <div class="empty-message text-center fw-bold" style="font-size: 24px">Aucun bien correspond à vos critères 😢</div>
+            <div class="empty-message text-center fw-bold" style="font-size: 24px">{% translate "No property corresponds to your criteria " %}😢</div>
         {% endif %}
         
         {% include 'includes/all_adverts.html' %}
