--- a/adverts/templates/includes/last_adverts.html
+++ b/adverts/templates/includes/last_adverts.html
@@ -47,7 +47,7 @@
             {% else %}
                 <div class="h3">{{ last_user_advert.price }}€</div>
             {% endif %}
-            <div class="fw-bold mb-2 small">{{ last_user_advert.service_type }} / {{ last_user_advert.property_type }}</div>
+            <div class="fw-bold mb-2 small">{% if last_user_advert.service_type == "Location" %}{% translate "Rent" %}{% else %}{% translate "Sale" %}{% endif %} / {% if last_user_advert.property_type == "Maison" %}{% translate "House" %}{% else %}{% translate "Apartment" %}{% endif %}</div>
             <div class="fw-bold small">{% blocktranslate with room_c=last_user_advert.room_count bedroom_c=last_user_advert.bedroom_count surface=last_user_advert.surface %}{{ room_c }} room(s) - {{ bedroom_c }} bedroom(s) - {{ surface }}m²{% endblocktranslate %}</div>
             <div class="fw-bold small">
                 {% if last_user_advert.is_furnished %}{% translate "Furnished" %}{% endif %}
