--- a/adverts/templates/includes/fav_adverts.html
+++ b/adverts/templates/includes/fav_adverts.html
@@ -35,7 +35,7 @@
             {% else %}
                 <div class="h4">{{ user_fav.price }}€</div>
             {% endif %}
-            <div class="fw-bold mb-2 small">{{ user_fav.service_type }} / {{ user_fav.property_type }}</div>
+            <div class="fw-bold mb-2 small">{% if user_fav.service_type == "Location" %}{% translate "Rent" %}{% else %}{% translate "Sale" %}{% endif %} / {% if user_fav.property_type == "Maison" %}{% translate "House" %}{% else %}{% translate "Apartment" %}{% endif %}</div>
             <div class="fw-bold small">{% blocktranslate with room_c=user_fav.room_count bedroom_c=user_fav.bedroom_count surface=user_fav.surface %}{{ room_c }} room(s) - {{ bedroom_c }} bedroom(s) - {{ surface }}m²{% endblocktranslate %}</div>
             <div class="fw-bold small">
                 {% if user_fav.is_furnished %}{% translate "Furnished" %}{% endif %}
